developped autoregressive approach to the sight modality with the addition of ResNet-based BetaVAE models as cnn_encoders in diff obverter and use of loss computation in parallel of the Referential Game...

--- a/examples/emerging_language_analysis.ipynb
+++ b/examples/emerging_language_analysis.ipynb
@@ -456,14 +456,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Topographic similarity between the language space and the visual feature space: 0.7979867572986369 (with p=0.0).\n"
+     "ename": "NameError",
+     "evalue": "name 'rho' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-b92b97584644>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Topographic similarity between the language space and the visual feature space: {} (with p={}).\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrho\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'rho' is not defined"
      ]
     }
    ],
